templates/initContainer.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: museum
spec:
  replicas: 1
  selector:
    matchLabels:
      app: museum
  template:
    metadata:
      labels:
        app: museum
    spec:
      volumes:
        - name: museum-config
          emptyDir: {}
      containers:
        - name: museum
          image: ghcr.io/ente-io/server
          args: ["--config", "/etc/ente/museum.yaml"]
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: museum-config
              mountPath: /etc/ente
