templates/museum-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: museum
spec:
  selector:
    app: museum
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
